# test

linux/app/: CMakeLists.txt
linux/app/src/: main.cc
linux/curves/: CMakeLists.txt
linux/curves/include/: curves.h
windows/app/: CMakeLists.txt
windows/app/cmake/: FindCUR.cmake  FindTBB.cmake
windows/app/src/: main.cpp
windows/curves/: CMakeLists.txt
windows/curves/include/: curves.h
windows/curves/src/: curves.cpp
